--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/owl-carousel.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/nice-select.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/menubar.css' %}">
 </head>
 <body>
     <!-- Preloader Starts -->
