--- a/employee/templates/employee/employee_list.html
+++ b/employee/templates/employee/employee_list.html
@@ -1,6 +1,39 @@
 {% extends 'base.html' %}
 {% block title %}구해요!{% endblock %}
 {% block contents %}
+<style type="text/css">
+@charset "utf-8";
+
+    .menu {
+        height:50px;
+        width:100px;
+		transition: all 0.5s ease;
+		background: white;
+		padding: 10px;
+		font-family: 'Nanum Gothic', sans-serif;
+		font-weight: 600;
+	 }
+	 .menu:hover{
+		background: #10A4FF;
+	 }
+	 .menu-discript{
+		color:#999999;
+		font-weight: lighter;
+		margin:10px 0;
+	 }
+</style>
+<nav id="bo_cate">
+            <ul id="bo_cate_ul">
+                <li><a href="" id="bo_cate_on">전체</a></li>
+                <li><a href="">집안일</a></li>
+                <li><a href="">짐 옮기기</a></li>
+                <li><a href="">펫 서비스</a></li>
+                <li><a href="">역할 대행</a></li>
+                <li><a href="">단거리 배달</a></li>
+                <li><a href="">카풀</a></li>
+                <li><a href="">기타</a></li>
+          </ul>
+</nav>
 여기는 노예
 <div class="container">
     <script language="JavaScript">
@@ -22,9 +55,10 @@
     {% endfor %}
 </div>
 
-<div class="btn1">
-<a href="/employee/new">글쓰기<width="22px" style="margin:9px 0 0 13px"></a>
-</div>
+<a href="/employee/new">
+    <div class="menu">글쓰기</div>
+</a>
+
 
 
 {% endblock %}
