--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,12 @@
             <div class="row">
                 <div class="col-lg-2">
                     <div class="logo-area">
-                        <a href="{% url 'main:index' %}"><img src="{% static 'image/logo.png'%}" alt="logo"></a>
+
+                        <a href="{% url 'main:index' %}" class=inkfont>
+                            <!--<img src="{% static 'image/logo.png'%}" alt="logo">-->
+                            Heros
+                        </a>
+
                     </div>
                 </div>
                 <div class="col-lg-10">
