--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}Heros{% endblock %}
 {% block contents %}
+{% load static %}
+<div style="text-align: center;">
+<img src="{% static 'image/main_intro.png'%}" alt="logo">
+</div>
 {% endblock %}
