--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
                                 <li><a href="{%url 'accounts:logout_view'%}">로그아웃</a></li>
                                 {%else%}
                                 <a href="{%url 'accounts:login_view'%}" class="login">로그인</a>
-                                <a href="{%url 'accounts:signup_view'%}" class="template-btn">회원가입</a>
+                                <a href="{%url 'accounts:signup_view'%}" class="login">회원가입</a>
                                 {%endif%}
                             </li>
                         </ul>
