--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,13 +1,49 @@
-{% extends 'base.html' %}
-{% block title %}로그인{% endblock %}
-{% block contents %}
-<div class="container">
-    <h1>login</h1>
-    <form method="POST" action="{% url 'accounts:login_view' %}">
-        {% csrf_token %}
-        {{ login_form }}
-        <br><br>
-        <input type="submit" class="btn btn-primary" value="login">
-    </form>
+{% load static %}
+<head>
+<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <style type="text/css">
+    a {
+        text-decoration:none;
+        color: Green
+    }
+    .lo {text-transform: lowercase;}
+</style>
+
+    </head>
+<head>
+    <style>
+        #container{
+            height:500px;
+            display : flex;
+            justify-content: center;
+            align-items: center;
+
+        }
+        #item {
+
+        }
+    </style>
+</head>
+
+<div class="container" style="font-family: 'InkLipquid'; font-size: 1em;" >
+    <div id ="container">
+        <center>
+            <div id ="item">
+                <h1 style="font-family: 'InkLipquid'; font-size: 5em;"><a href="{% url 'main:index' %}" >Heros</a></h1>
+            </div>
+
+            <div if ="item">
+                 <form method="POST" action="{% url 'accounts:login_view' %}">
+                     {% csrf_token %}
+
+                     {{ login_form }}
+                 <br><br>
+                     <input type="submit" class="btn btn-primary" value="login">
+                    </form>
+
+            </div>
+
+        </center>
+    </div>
+
 </div>
-{% endblock %}
