--- a/employee/templates/employee/new_feed.html
+++ b/employee/templates/employee/new_feed.html
@@ -4,14 +4,73 @@
 <div class="form_box">
     <form method="POST">
         {% csrf_token %}
-        <h3>게시물 올리기</h3>
-        <input class="input_field" type="text" placeholder="글쓴이의 이름은?" name="author"><br>
-        <input class="input_field" type="password" placeholder="글 비밀번호" name="password"><br>
-        <input class="input_field" type="text" placeholder="제목을 입력해주세요." name="title"><br>
-        <textarea class="textarea_field" placeholder="내용을 입력해주세요." name="content"></textarea><br>
-        <button class="write_button">게시</button>
+        <div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+        <h2 class="text-center">게시글 입력하기</h2><p></p>
+
+        <form action="BoardReWriteProc.jsp" method="post">
+            <div class="table table-responsive">
+                      <table class="table table-striped">
+            <tr>
+                <td>작성자</td>
+                <td><input type="text"  class="form-control" name="writer"></td>
+            </tr>
+            <tr>
+                <td>제목</td>
+                <td><input type="text"  class="form-control" name="subject"></td>
+            </tr>
+
+            <tr>
+                <td>비밀번호</td>
+                <td><input type="password"  class="form-control" name="password"></td>
+            </tr>
+
+            <tr>
+                <td>글내용</td>
+                <td><textarea rows="10" cols="50" name="content"  class="form-control"></textarea></td>
+            </tr>
+
+                          <select name="menuid" class="step01" style="width: 156px;" onchange="BoardCategoryMgr.onChangeBoardCategory(); return false;" id="boardCategory">
+
+											<option value="-1">게시판선택</option>
+
+
+											<option wf="true" wfid="65" value="1432">집안일</option>
+
+											<option wf="true" wfid="65" value="1433">짐 옮기기</option>
+
+											<option wf="true" wfid="65" value="1433">펫 서비스</option>
+
+											<option wf="true" wfid="65" value="1433">역할 대행</option>
+
+											<option wf="true" wfid="65" value="1433">단거리 배달</option>
+
+											<option wf="true" wfid="65" value="1433">카풀</option>
+
+											<option wf="true" wfid="65" value="1433">기타</option>
+									</select>
+            <tr>
+                <td colspan="2"  class="text-center">
+
+                    <input type="hidden" name="num"  value="<%= num %>">
+                    <input type="hidden" name="ref"  value="<%= ref %>">
+                    <input type="hidden" name="ref_step"  value="<%= ref_step %>">
+                    <input type="hidden" name="ref_level"  value="<%= ref_level %>">
+                    <input type="submit" value="글쓰기" class="btn btn-success">
+                    <input type="reset" value="취소" class="btn btn-warning">
+                    <input type="button"  class="btn btn-primary" onclick="location.href='BoardList.jsp'" value="전체글보기">
+                </td>
+            </tr>
+
+          </table>
+
+
+            </div>
+        </form>
+    </div>
+</div>
     </form>
 </div>
 
 {% endblock %}
-
