--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -4,7 +4,7 @@
     <style type="text/css">
     a {
         text-decoration:none;
-        color: Green
+        color: White
     }
     .lo {text-transform: lowercase;}
 </style>
@@ -22,6 +22,18 @@
         #item {
 
         }
+        body {
+
+		background-image : url('{% static 'image/Login.jpg' %}');
+
+		background-repeat : no-repeat;
+
+		background-size : cover;
+
+        }
+
+
+
     </style>
 </head>
 
