--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -9,5 +9,6 @@
         <br><br>
         <input type="submit" class="btn btn-primary" value="login">
     </form>
+    <a href="{%url 'accounts:signup_view'%}" class="template-btn">회원가입</a>
 </div>
 {% endblock %}
