--- a/employee/templates/employee/new_feed.html
+++ b/employee/templates/employee/new_feed.html
@@ -28,7 +28,10 @@
 
             <tr>
                 <td>글내용</td>
-                <td><textarea rows="10" cols="50" name="content"  class="form-control"></textarea></td>
+                <td><textarea rows="10" cols="50" name="content"  class="form-control"<p>날짜:
+시간:
+위치:</textarea>
+                </td>
             </tr>
 
                           <select name="menuid" class="step01" style="width: 156px;" onchange="BoardCategoryMgr.onChangeBoardCategory(); return false;" id="boardCategory">
