--- a/employee/templates/employee/detail_feed.html
+++ b/employee/templates/employee/detail_feed.html
@@ -1,17 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}구해요!{% endblock %}
+{% block contents %}
+<div class="container">
     <b>글쓴이</b> {{ feed.author }}<br><br>
     <b>날짜</b> {{ feed.created_at }}<br><br>
     <b>제목</b> {{ feed.title }}<br><br>
     <b>내용</b> {{ feed.text}}
-</body>
-</html>
 <br><br>
-<div><a href="/employee/feed/{{ feed.pk }}/edit">수정<height="16px"></a> <a href="/employee/feed/{{ feed.pk }}/remove">삭제<height="16px"></a>
-<a href="/employee/">뒤로가기<height="16px"></a>
 </div>
+
+<div class="container">
+<div>
+    <a href="/employee/feed/{{ feed.pk }}/edit">수정<height="16px"></a>
+    <a href="/employee/feed/{{ feed.pk }}/remove">삭제<height="16px"></a>
+    igg<a href="/employee/">뒤로가기<height="16px"></a>
+</div>
+</div>
+
+{% endblock %}
