--- a/employee/templates/employee/employee_list.html
+++ b/employee/templates/employee/employee_list.html
@@ -1,42 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}구해요!{% endblock %}
 {% block contents %}
-<style type="text/css">
-@charset "utf-8";
-    .menu {
-        text-align:center;
-        height:50px;
-        width:100px;
-		transition: all 0.5s ease;
-		background: white;
-		padding: 10px;
-		font-family: 'Nanum Gothic', sans-serif;
-		font-weight: 600;
-	 }
-	 .menu:hover{
-	    color:#FFFFFF;
-		background: #10A4FF;
-	 }
-	 .menu-discript{
-		color:#999999;
-		font-weight: lighter;
-		margin:10px 0;
-	 }
-	 #list_emp td{
-	    width:25%;
-	 }
-	 #feed hr {
-	    height: 1px;
-	    display: block;
-        margin-top: 0;
-        margin-bottom: 0;
-        margin-left: 0;
-        margin-right: 0;
-        box-shadow: 0 10px 10px -10px #8c8b8b inset;
-        border-width: 1px;
-	 }
-
-</style>
 
 <div class="container">
 <nav id="bo_cate">
@@ -118,7 +82,8 @@
                 </ul>
             </nav>
         </td>
-        <td><a href="/employee/new" style="float:right"><div class="menu" style="line-height:30px;">글쓰기</div></a></td>
+        <td><a href="/employee/new" style="float:right"><div class="menu" style="line-height:30px;">글쓰기</div></a>
+        </td>
     </tr>
     </table>
 </div>
