--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 <head>
 <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
@@ -8,33 +7,19 @@
         color: White
     }
     .lo {text-transform: lowercase;}
-</style>
-
-    </head>
-<head>
-    <style>
         #container{
             height:500px;
             display : flex;
             justify-content: center;
             align-items: center;
-
         }
         #item {
-
         }
         body {
-
 		background-image : url('{% static 'image/Login.jpg' %}');
-
 		background-repeat : no-repeat;
-
 		background-size : cover;
-
         }
-
-
-
     </style>
 </head>
 
@@ -45,33 +30,28 @@
                 <h1 style="font-family: 'InkLipquid'; font-size: 5em;"><a href="{% url 'main:index' %}" >Heros</a></h1>
             </div>
 
-            <form method="post" action="{% url 'accounts:login_view' %}" class="sign-in-form">
+            <form method="POST" action="{% url 'accounts:login_view' %}" >
               {%csrf_token%}
               <h2 class="sub-title"> 로그인 </h2>
-              {% if form.errors %}
-              <p>Your username and password didn't match. Please try again.</p>
-              {% endif %}
-              {% if next %}
-                  {% if user.is_authenticated %}
-                  <p>Your account doesn't have access to this page. To proceed,
-                  please login with an account that has access.</p>
-                  {% else %}
-                  <p>Please login to see this page.</p>
-                  {% endif %}
-              {% endif %}
-              <div class="form-group">
-                <label for="{{ form.username.id_for_label }}">ID</label>
-                <input class="form-control" id="{{ form.username.id_for_label }}" maxlength="15" name="{{ form.username.html_name }}" type="text" />
-              </div>
-              <div class="form-group">
-                <label for="{{ form.password.id_for_label }}">패스워드</label>
-                <input class="form-control" id="{{ form.password.id_for_label }}" maxlength="120" name="{{ form.password.html_name }}" type="password" />
-              </div>
+                {% if form.errors %}
+                <p>Your username and password didn't match. Please try again.</p>
+                {% endif %}
+
+
+                <div class ="form-group">
+                    <label for="id_username">ID:</label>
+                    <input type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="20" required="" id="id_username">
+                </div>
+                <div class="form-group">
+                    <label for="id_password">비밀번호:</label>
+                    <input type="password" name="password" autocomplete="current-password" required="" id="id_password">
+                </div>
+
               <input type="submit" class="save btn btn-success" value="로그인">
+
               <a href="{% url 'accounts:signup_view' %}">
                 <button type="button" class="btn btn-danger">Signup</button>
               </a>
-              <input type="hidden" name="next" value="{{ next }}" />
             </form>
 
 
