--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -32,6 +32,26 @@
 		background-size : cover;
 
         }
+        #container .btn-success{
+        font-family: 'InkLipquid';
+        font-size : 2em;
+        }
+        .container .btn-success {
+        width :90px;
+        height:50px;
+        }
+        .container .save{
+        position: absolute;
+        top: 67%;
+        left: 43%;
+        }
+
+        .container .Sign{
+        position: absolute;
+        top: 67%;
+        left: 53%;
+        }
+
 
 
 
@@ -59,17 +79,25 @@
                   <p>Please login to see this page.</p>
                   {% endif %}
               {% endif %}
-              <div class="form-group">
-                <label for="{{ form.username.id_for_label }}" style="color: Black ; font-size: 3em;" >ID</label>
-                <input class="form-control" id="{{ form.username.id_for_label }}" maxlength="15" name="{{ form.username.html_name }}" type="text" />
-              </div>
-              <div class="form-group">
-                <label for="{{ form.password.id_for_label }}" style="color: Black ; font-size: 3em;">P.W</label>
+
+              <div class="form-group" >
+                  <table style="width:100%;vertical-align:middle;"><tr style="align-items: center;"><td style="width:20%;">
+                      <label for="{{ form.username.id_for_label }}" style="color: Black ; font-size: 3em;" >ID</label></td>
+                      <td style="float:right;line-height:10px;"><div style="width:100%;height:100%;">
+                          <br><br>
+                          <input class="form-control" id="{{ form.username.id_for_label }}" maxlength="15" name="{{ form.username.html_name }}" type="text" />
+                      </div></td>
+                  </tr></table></div>
+              <div class="form-group" >
+                  <table style="width:100%"><tr><td style="width:20%;">
+                <label for="{{ form.password.id_for_label }}" style="color: Black ; font-size: 3em;">P.W</label></td>
+                      <td style="float:right"><div><br>
                 <input class="form-control" id="{{ form.password.id_for_label }}" maxlength="120" name="{{ form.password.html_name }}" type="password" />
-              </div>
-              <input type="submit" class="save btn btn-success" value="로그인">
+                  </div></td></tr></table></div>
+                    </tr></table>
+              <input type="submit" class="save btn btn-success"  value="Log in">
               <a href="{% url 'accounts:signup_view' %}">
-                <button type="button" class="btn btn-danger">Signup</button>
+                <button type="button" class="Sign btn btn-success">Signup</button>
               </a>
               <input type="hidden" name="next" value="{{ next }}" />
             </form>
