--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -64,18 +64,17 @@
 
               <div class="form-group" >
                   <table style="width:100%;vertical-align:middle;"><tr style="align-items: center;"><td style="width:20%;">
-                      <label for="{{ form.username.id_for_label }}" style="color: Black ; font-size: 3em;" >ID</label></td>
+                      <label style="color: Black ; font-size: 3em;" >ID</label></td>
                       <td style="float:right;line-height:10px;"><div style="width:100%;height:100%;">
                           <br><br>
-                          <input class="form-control" id="{{ form.username.id_for_label }}" maxlength="15" name="{{ form.username.html_name }}" type="text" />
+                          <input  type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="20" required="" id="id_username">
                       </div></td>
                   </tr></table></div>
               <div class="form-group" >
                   <table style="width:100%"><tr><td style="width:20%;">
-                <label for="{{ form.password.id_for_label }}" style="color: Black ; font-size: 3em;">P.W</label></td>
+                <label style="color: Black ; font-size: 3em;">P.W</label></td>
                       <td style="float:right"><div><br>
-                <input class="form-control" id="{{ form.password.id_for_label }}" maxlength="120" name="{{ form.password.html_name }}" type="password" />
-                  </div></td></tr></table></div>
+                        <input type="password" name="password" autocomplete="current-password" required="" id="id_password">                  </div></td></tr></table></div>
                     </tr></table>
               <input type="submit" class="save btn btn-success"  value="Log in">
 
