--- a/employee/templates/employee/new_feed.html
+++ b/employee/templates/employee/new_feed.html
@@ -1,6 +1,20 @@
 {% extends 'base.html' %}
 {% block title %}구해요!{% endblock %}
 {% block contents %}
+<style>
+ select {
+width: 200px;
+padding: .8em .5em;
+border: 1px solid #999;
+font-family: inherit;
+background: url('arrow.jpg') no-repeat 95% 50%;
+border-radius: 0px;
+-webkit-appearance: none;
+-moz-appearance: none;
+appearance: none;
+}
+</style>
+
 <div class="form_box">
     <form method="POST">
         {% csrf_token %}
@@ -13,46 +27,51 @@
             <div class="table table-responsive">
                       <table class="table table-striped">
             <tr>
-                <td>작성자</td>
-                <td><input type="text"  class="form-control" name="writer"></td>
+                <td><b>작성자</b></td>
+                <td><input type="text" class="form-control" name="author"></td>
             </tr>
             <tr>
-                <td>제목</td>
-                <td><input type="text"  class="form-control" name="subject"></td>
+                <td><b>제목</b></td>
+                <td><input type="text"  class="form-control" name="title"></td>
+            </tr>
+            <tr>
+                <td><b>장소</b></td>
+                <td><input type="text"  class="form-control" name="place"></td>
+            </tr>
+            <tr>
+                <td><b>금액</b></td>
+                <td><input type="text"  class="form-control" name="price"></td>
             </tr>
 
             <tr>
-                <td>비밀번호</td>
-                <td><input type="password"  class="form-control" name="password"></td>
-            </tr>
-
-            <tr>
-                <td>글내용</td>
-                <td><textarea rows="10" cols="50" name="content"  class="form-control"<p>날짜:
+                <td><b>내용</b></td>
+                <td><textarea rows="10" cols="50" name="text"  class="form-control"<p>
+날짜:
 시간:
-위치:</textarea>
+위치:
+                    </textarea>
                 </td>
             </tr>
 
-                          <select name="menuid" class="step01" style="width: 156px;" onchange="BoardCategoryMgr.onChangeBoardCategory(); return false;" id="boardCategory">
+                          <select name="menuid" class="step01" id="m_select" onchange="BoardCategoryMgr.onChangeBoardCategory(); return false;" id="boardCategory">
 
-											<option value="-1">게시판선택</option>
+                                 <option value="-1">게시판선택</option>
 
 
-											<option wf="true" wfid="65" value="1432">집안일</option>
+                                 <option wf="true" wfid="65" value="1432">집안일</option>
 
-											<option wf="true" wfid="65" value="1433">짐 옮기기</option>
+                                 <option wf="true" wfid="65" value="1433">짐 옮기기</option>
 
-											<option wf="true" wfid="65" value="1433">펫 서비스</option>
+                                 <option wf="true" wfid="65" value="1433">펫 서비스</option>
 
-											<option wf="true" wfid="65" value="1433">역할 대행</option>
+                                 <option wf="true" wfid="65" value="1433">역할 대행</option>
 
-											<option wf="true" wfid="65" value="1433">단거리 배달</option>
+                                 <option wf="true" wfid="65" value="1433">단거리 배달</option>
 
-											<option wf="true" wfid="65" value="1433">카풀</option>
+                                 <option wf="true" wfid="65" value="1433">카풀</option>
 
-											<option wf="true" wfid="65" value="1433">기타</option>
-									</select>
+                                 <option wf="true" wfid="65" value="1433">기타</option>
+                           </select>
             <tr>
                 <td colspan="2"  class="text-center">
 
@@ -61,8 +80,7 @@
                     <input type="hidden" name="ref_step"  value="<%= ref_step %>">
                     <input type="hidden" name="ref_level"  value="<%= ref_level %>">
                     <input type="submit" value="글쓰기" class="btn btn-success">
-                    <input type="reset" value="취소" class="btn btn-warning">
-                    <input type="button"  class="btn btn-primary" onclick="location.href='BoardList.jsp'" value="전체글보기">
+                    <input type="button"  class="btn btn-primary" onclick="location.href='/employee'" value="취소">
                 </td>
             </tr>
 
