--- a/employee/templates/employee/new_feed.html
+++ b/employee/templates/employee/new_feed.html
@@ -58,19 +58,19 @@ appearance: none;
                                  <option value="-1">게시판선택</option>
 
 
-                                 <option wf="true" wfid="65" value="1432">집안일</option>
+                                 <option wf="true" wfid="65" value="집안일">집안일</option>
 
-                                 <option wf="true" wfid="65" value="1433">짐 옮기기</option>
+                                 <option wf="true" wfid="65" value="짐 옮기기">짐 옮기기</option>
 
-                                 <option wf="true" wfid="65" value="1433">펫 서비스</option>
+                                 <option wf="true" wfid="65" value="펫 서비스">펫 서비스</option>
 
-                                 <option wf="true" wfid="65" value="1433">역할 대행</option>
+                                 <option wf="true" wfid="65" value="역할 대행">역할 대행</option>
 
-                                 <option wf="true" wfid="65" value="1433">단거리 배달</option>
+                                 <option wf="true" wfid="65" value="단거리 배달">단거리 배달</option>
 
-                                 <option wf="true" wfid="65" value="1433">카풀</option>
+                                 <option wf="true" wfid="65" value="카풀">카풀</option>
 
-                                 <option wf="true" wfid="65" value="1433">기타</option>
+                                 <option wf="true" wfid="65" value="기타">기타</option>
                            </select>
             <tr>
                 <td colspan="2"  class="text-center">
