--- a/accounts/templates/accounts/delete.html
+++ b/accounts/templates/accounts/delete.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
-{% block container %}
+{% block contents %}
 
 <h1>User delete</h1>
-<form method="POST">
+<form method="POST" action="{% url 'accounts:delete' %}">
     {% csrf_token %}
     <p>정말로 탈퇴하시겠습니까?</p>
-    <input type="submit" value="탈퇴"/>
+
+    <button type="submit" class="btn btn-danger" >탈퇴</button>
 </form>
 {% endblock %}
