--- a/employee/templates/employee/detail_feed.html
+++ b/employee/templates/employee/detail_feed.html
@@ -13,7 +13,7 @@
     <b>제목</b> &nbsp;&nbsp;{{ feed.title }}
     <hr>
     <table style="width:100%" id="info_table"><tr>
-        <td><b>글쓴이</b>&nbsp;&nbsp; {{ feed.author }} </td>
+        <td><b>글쓴이</b>&nbsp;&nbsp; {{ feed.postid }} </td>
         <td><b>날짜</b>&nbsp;&nbsp; {{ feed.created_at }} </td>
     </tr>
     </table>
