--- a/accounts/templates/accounts/update.html
+++ b/accounts/templates/accounts/update.html
@@ -5,14 +5,15 @@
 
 <form method="POST" action="{% url 'accounts:update' %}">
     {% csrf_token %}
-    <div class="form-group">
+    <!--<div class="form-group">
         <label>이름</label>
         <input  type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="20" required="" id="username">
     </div>
     <div class="form-group">
         <label>전화번호</label>
         <input  type="text" name="phnum" autofocus="" autocapitalize="none" autocomplete="phnum" maxlength="20" required="" id="phnum">
-    </div>
+    </div>-->
+    {{ change_form }}
     <input type="submit" value="정보 변경"/>
 </form>
 
