--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
                             </li>
                             <li class="menu-btn">
                                 {% if user.is_authenticated %}
-                                <li><a href="{% url 'accounts:people' user.name %}">마이페이지</a></li>
+                                <li><a href="{% url 'accounts:people' user.id %}">마이페이지</a></li>
                                 <li><a href="{%url 'accounts:logout_view'%}">로그아웃</a></li>
                                 {%else%}
                                 <a href="{%url 'accounts:login_view'%}" class="login">로그인</a>
