--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -2,7 +2,15 @@
 {% block title %}Heros{% endblock %}
 {% block contents %}
 {% load static %}
-<div style="text-align: center;">
+
+
+
+
+<div text-align="center">
+<img src="https://cdn.dribbble.com/users/58530/screenshots/5476801/ch_logo_motion.gif">
 <img src="{% static 'image/main_intro.png'%}" alt="logo">
+
 </div>
+
+
 {% endblock %}
