--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,12 +1,18 @@
 {% extends 'base.html' %}
 {% block title %}Heros{% endblock %}
-{% block contents %}
 {% load static %}
+<head>
+#container .gif{
+        position: absolute;
+        top: 67%;
+        left: 53%;
+        }
+</head>
+{% block contents %}
 
 
 
-
-<div text-align="center">
+<div  class="gif">
 <img src="https://cdn.dribbble.com/users/58530/screenshots/5476801/ch_logo_motion.gif">
 <img src="{% static 'image/main_intro.png'%}" alt="logo">
 
