--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,7 @@
                         <div class="col-lg-8 col-md-6">
                             <span>
 
-                                Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib
+                                Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |
                                 <br> 2020 Software Engineering 윤동준 이준병 이상목 이진우 박재성</a>
                                 </span>
                         </div>
