--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -9,52 +9,37 @@
 
         #container{
             position: relative;
-            left: 300px;
+            left: 0px;
             top:100px;
             height:500px;
             display : flex;
             justify-content: center;
             align-items: center;
+
+
+
         }
-        #item {
-        }
+
         body {
-
-
-
-        #container .btn-success{
-        font-family: 'InkLipquid';
-        font-size : 2em;
-        }
-
-        .container .btn-success {
-        width :90px;
-        height:50px;
-        }
-
-        .container .save{
-        position: relative;
-        top: 67%;
-
-        }
-
-        .container .Sign{
-        position: relative;
-        top: 60%;
+             #container .btn-success{
+             font-family: 'InkLipquid';
+             font-size : 2em;
 
         }
 
 
 
 
-`
+
     </style>
 </head>
-<img src="./imgs/position.jpg" class="fixed">
 
 
-<div class="container" style="font-family: 'InkLipquid'; font-size: 1em;" >
+
+<div class="container" style="font-family: 'InkLipquid'; font-size: 1em;">
+
     <div id ="container">
+        <img src="{% static 'image/Hero.jpg'%}" class="Hero" style="width:30%; position: relative; right: 10%;">
         <center>
             <div id ="item">
                 <h1 style="font-family: 'InkLipquid'; font-size: 5em;"><a href="{% url 'main:index' %}" >Heros</a></h1>
