--- a/employee/templates/employee/edit_feed.html
+++ b/employee/templates/employee/edit_feed.html
@@ -34,7 +34,7 @@ appearance: none;
                     <tr>
                 <td><b>카테고리 </b></td>
                 <td>
-                <select name="categorie">
+                <select name="menuid">
                      <option value="게시판선택">게시판선택</option>
                      <option value="집안일">집안일</option>
                      <option value="짐 옮기기">짐 옮기기</option>
