0607 Progress and base.html edit

--- a/templates/base.html
+++ b/templates/base.html
@@ -80,15 +80,16 @@
 
     {% endblock %}
     <!-- Footer Area Starts -->
-    <footer class="footer-area" style="padding:10px">
+    <footer class="footer-area" style="padding:0px" >
             <div class="footer-copyright">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-8 col-md-6">
+                        <div class="col-lg-8 col-md-12">
                             <span>
-
-                                Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |
-                                <br> 2020 Software Engineering 윤동준 이준병 이상목 이진우 박재성</a>
+                                <br>
+                                Copyright &copy; Heros All rights reserved.
+                                <br> 주소 : 대구 북구 대학로 80 IT 2호관 | 개발자: 박재성 윤동준 이상목 이진우 이준병
+                                <br> 연락처 : 010-5585-7521 </a>
                                 </span>
                         </div>
                     </div>
