--- a/employee/templates/employee/carpool.html
+++ b/employee/templates/employee/carpool.html
@@ -31,13 +31,13 @@
 <div class="container">
 <nav id="bo_cate">
             <ul>
-                <li><a href=""id="bo_cate_on">전체</a></li>
+                <li><a href="/employee/">전체</a></li>
                 <li><a href="/employee/home/">집안일</a></li>
                 <li><a href="/employee/load/">짐 옮기기</a></li>
                 <li><a href="/employee/pet/">펫 서비스</a></li>
                 <li><a href="/employee/acting/">역할 대행</a></li>
                 <li><a href="/employee/short/">단거리 배달</a></li>
-                <li><a href="/employee/carpool/">카풀</a></li>
+                <li><a href=""id="bo_cate_on">카풀</a></li>
                 <li><a href="/employee/etc/">기타</a></li>
           </ul>
 </nav>
