--- a/employee/templates/employee/home.html
+++ b/employee/templates/employee/home.html
@@ -31,8 +31,8 @@
 <div class="container">
 <nav id="bo_cate">
             <ul>
-                <li><a href=""id="bo_cate_on">전체</a></li>
-                <li><a href="/employee/home/">집안일</a></li>
+                <li><a href="/employee/">전체</a></li>
+                <li><a href=""id="bo_cate_on">집안일</a></li>
                 <li><a href="/employee/load/">짐 옮기기</a></li>
                 <li><a href="/employee/pet/">펫 서비스</a></li>
                 <li><a href="/employee/acting/">역할 대행</a></li>
@@ -59,7 +59,6 @@
 <div class="container">
     <script>i=0</script>
     {% for feed in posts %}
-
     <div class="feed" >
         <table style="width:100%;height:'';"><tr>
             <td style="width:10%">
