--- a/accounts/templates/accounts/update.html
+++ b/accounts/templates/accounts/update.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block contents %}
 
+<div class="container">
 <h1>회원 정보 수정</h1>
 
 <form method="POST" action="{% url 'accounts:update' %}">
@@ -13,11 +14,15 @@
         <label>전화번호</label>
         <input  type="text" name="phnum" autofocus="" autocapitalize="none" autocomplete="phnum" maxlength="20" required="" id="phnum">
     </div>-->
+
     {{ change_form }}
-    <input type="submit" value="정보 변경"/>
+    <br>
+    {{r_test}}
+
+    <input type="submit" value="정보 변경"/> <a href="{% url 'accounts:delete' %}" class="btn btn-danger">회원탈퇴</a>
 </form>
 
-<a href="{% url 'accounts:delete' %}" class="btn btn-danger">회원탈퇴</a>
 
+</div>
 
 {% endblock %}
